[gd_scene load_steps=6 format=2]

[ext_resource path="res://new_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/question.png" type="Texture" id=4]
[ext_resource path="res://scenes/widgets/LangSelectButton.tscn" type="PackedScene" id=5]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/rouage.png-e58d0e34144c5399ed5547acf351ac20.stex"

[node name="Control" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="ParametersButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 202.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource( 2 )
flat = true
icon_align = 1

[node name="LangSelectButton" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 202.0
margin_right = 808.0
margin_bottom = 97.0
size_flags_stretch_ratio = 3.0
items = [ "english", null, false, 0, null, "fran√ßais", null, false, 1, null ]

[node name="HelpButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 808.0
margin_right = 1010.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 4 )
flat = true
icon_align = 1

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 97.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="Demo" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 1010.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "DEMO"

[node name="FastMode" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 163.0
margin_right = 1010.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "FASTMODE"

[node name="NUpMode" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 326.0
margin_right = 1010.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "NUPMODE"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ParametersButton" to="." method="_on_ParametersButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Demo" to="." method="_on_Demo_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/FastMode" to="." method="_on_FastMode_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/NUpMode" to="." method="_on_NUpMode_pressed"]
